Fixed some CSS bugs on smaller screens

--- a/src/Components/TappatInstruction/TappatInstruction.module.css
+++ b/src/Components/TappatInstruction/TappatInstruction.module.css
@@ -53,3 +53,12 @@
     to {opacity: 1;}
     
 }
+
+/*Media Queries*/
+@media only screen and (max-width: 767px) {
+    .Instruction p {
+        width: 80%;
+    }
+
+
+}
