--- a/src/Components/UI/Header/Header.module.css
+++ b/src/Components/UI/Header/Header.module.css
@@ -27,3 +27,11 @@
     margin-top: 10px;
     
 }
+
+@media only screen and (max-width: 767px) {
+    .Header h1 {
+        font-size: 2rem;
+        margin:auto;
+    }
+}
+
